# takatori

./: .clang-tidy  .gitattribute  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
src/: CMakeLists.txt  deleteme.cpp  main.cpp
src/chrono/: date.cpp  time_interval.cpp  time_of_day.cpp  time_point.cpp
src/datetime/: date.cpp  date_interval.cpp  date_util.h  datetime_interval.cpp  printing.cpp  time_interval.cpp  time_of_day.cpp  time_point.cpp  time_zone.cpp  time_zone_impl.cpp  time_zone_impl.h
src/document/: basic_document.cpp  document_map.cpp  region.cpp
src/graph/: topological_sort.h
src/model/: tree_element_forward.h  tree_element_vector_forward.h  tree_fragment_vector_forward.h
src/model/scalar/: binary.cpp  cast.cpp  coalesce.cpp  compare.cpp  conditional.cpp  conditional_alternative.cpp  expression.cpp  function_call.cpp  immediate.cpp  let.cpp  let_declarator.cpp  match.cpp  unary.cpp  variable_reference.cpp
src/plan/: aggregate.cpp  broadcast.cpp  discard.cpp  exchange.cpp  forward.cpp  graph.cpp  group.cpp  process.cpp  step.cpp
src/relation/: buffer.cpp  emit.cpp  expression.cpp  filter.cpp  find.cpp  graph.cpp  join_find.cpp  join_scan.cpp  project.cpp  scan.cpp  select.cpp  select_column.cpp  where.cpp  write.cpp
src/relation/details/: aggregate_element.cpp  cogroup_element.cpp  emit_element.cpp  graph_merger.cpp  graph_merger.h  key_pair_element.cpp  mapping_element.cpp  sort_key_element.cpp  union_element.cpp
src/relation/step/: aggregate.cpp  difference.cpp  distinct.cpp  flatten.cpp  intersection.cpp  join.cpp  limit.cpp  offer.cpp  take_cogroup.cpp  take_flat.cpp  take_group.cpp
src/scalar/: binary.cpp  cast.cpp  coalesce.cpp  compare.cpp  conditional.cpp  conditional_alternative.cpp  expression.cpp  function_call.cpp  immediate.cpp  let.cpp  let_declarator.cpp  match.cpp  unary.cpp  variable_declarator.cpp  variable_reference.cpp
src/scalar/details/: conditional_alternative.cpp
src/serializer/: json_printer.cpp  object_scanner.cpp
src/serializer/details/: relation_expression_property_scanner.cpp  relation_expression_property_scanner.h  scalar_expression_property_scanner.cpp  scalar_expression_property_scanner.h  simple_value_scanner.cpp  simple_value_scanner.h  statement_property_scanner.cpp  statement_property_scanner.h  step_property_scanner.cpp  step_property_scanner.h  type_property_scanner.cpp  type_property_scanner.h  value_property_scanner.cpp  value_property_scanner.h
src/statement/: extension.cpp  write.cpp
src/statement/details/: write_tuple.cpp
src/takatori/datetime/: conversion.cpp  date.cpp  date_util.h  printing.cpp  printing.h  time_interval.cpp  time_point.cpp  time_zone.cpp  (+1 more)
src/tree/: tree_fragment_vector_forward.h
src/type/: bit.cpp  character.cpp  data.cpp  data_type.cpp  decimal.cpp  declared.cpp  extension.cpp  time_of_day.cpp  time_point.cpp
src/util/: assertion.cpp  exception.cpp  fail.cpp  iomanip_util.h  object_creator.cpp  print_support.h
src/value/: bit.cpp  boolean.cpp  character.cpp  data.cpp  date.cpp  datetime_interval.cpp  decimal.cpp  time_interval.cpp  time_of_day.cpp  time_point.cpp
test/: CMakeLists.txt  deleteme_test.cpp
test/datetime/: date_datetime_test.cpp  date_interval_test.cpp  date_test.cpp  datetime_interval_test.cpp  time_interval_test.cpp  time_of_day_datetime_test.cpp  time_of_day_test.cpp  time_point_datetime_test.cpp  time_point_test.cpp  time_zone_test.cpp
test/document/: basic_document_test.cpp  region_test.cpp
test/graph/: graph_test.cpp  multiport_test.cpp  port_test.cpp  simple_vertex.h
test/model/: generic_tree.h  simple_clonable.h  tree_element_forward_test.cpp  tree_element_test.cpp  tree_element_util_test.cpp  tree_element_vector_forward_test.cpp  tree_element_vector_test.cpp  tree_fragment_vector_test.cpp
test/plan/: aggregate_test.cpp  broadcast_test.cpp  discard_test.cpp  exchange_test.cpp  forward_test.cpp  group_test.cpp  plan_dispatch_test.cpp  process_test.cpp  test_utils.h
test/relation/: buffer_test.cpp  emit_test.cpp  filter_test.cpp  find_test.cpp  join_find_test.cpp  join_scan_test.cpp  project_test.cpp  relation_graph_test.cpp  scan_test.cpp  select_test.cpp  test_utils.h  where_test.cpp  write_test.cpp
test/scalar/: binary_test.cpp  cast_test.cpp  coalesce_test.cpp  compare_test.cpp  conditional_test.cpp  dummy_extension.h  expression_dispatch_test.cpp  expression_walk_test.cpp  function_call_test.cpp  immediate_test.cpp  let_test.cpp  match_test.cpp  test_utils.h  unary_test.cpp  variable_reference_test.cpp
test/serializer/: object_scanner_test.cpp
test/statement/: dummy_extension.h  extension_statement_test.cpp  statement_write_test.cpp  test_utils.h
test/testing/: descriptors.h  value_object.h
test/tree/: generic_tree.h  simple_clonable.h  tree_element_forward_test.cpp  tree_element_test.cpp  tree_element_util_test.cpp  tree_element_vector_forward_test.cpp  tree_element_vector_test.cpp  tree_fragment_vector_test.cpp
test/type/: bit_type_test.cpp  character_type_test.cpp  data_type_dispatch_test.cpp  decimal_type_test.cpp  declared_type_test.cpp  dummy_extension.h  extension_type_test.cpp  simple_type_test.cpp  test_utils.h  time_of_day_type_test.cpp  time_point_type_test.cpp  type_dispatch_test.cpp
test/util/: assertion_test.cpp  clonable_ptr_test.cpp  clonable_test.cpp  consumer_test.cpp  downcast_test.cpp  enum_set_test.cpp  exception_test.cpp  fail_test.cpp  finalizer_test.cpp  infect_qualifier_test.cpp  maybe_shared_ptr_test.cpp  object_creator_test.cpp  optional_ptr_test.cpp  optional_view_test.cpp  ownership_reference_test.cpp  poiner_test.cpp  poiner_traits_test.cpp  reference_iterator_test.cpp  reference_list_view_test.cpp  reference_vector_test.cpp  rvalue_initializer_list_test.cpp  rvalue_reference_wrapper_test.cpp  sequence_view_test.cpp  smart_pointer_extractor_test.cpp  standard_memory_resource_test.cpp  string_builder_test.cpp  universal_extractor_test.cpp
test/value/: bit_value_test.cpp  character_value_test.cpp  decimal_value_test.cpp  dummy_extension.h  simple_value_test.cpp  value_dispatch_test.cpp
(+655 files in other folders)
